--- a/platformio.ini
+++ b/platformio.ini
@@ -22,3 +22,5 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.6
 	esphome/ESPAsyncWebServer-esphome@^3.2.2
 	links2004/WebSockets@^2.6.1
+	mbed-astaff15/eFLL@0.0.0+sha.460b409e26e8
+	zerokol/eFLL@^1.4.1
